--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.leon.myapp">
+
     <!--
     <uses-permission />
     <permission />
@@ -15,8 +16,8 @@
     <supports-gl-texture />
     -->
     <application
-        android:allowBackup="true"
         android:name=".App"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -35,16 +36,21 @@
         -->
         <activity
             android:name=".Views.SplashScreen.SplashActivity"
-            android:theme="@style/SplashScreenTheme"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Views.Login.LoginActivityView"/>
-        <activity android:name=".Views.Registration.RegistrationActivityView"/>
-        <activity android:name=".Views.Main.MainActivity"/>
+        <activity
+            android:name=".Views.Login.LoginActivityView"
+            android:theme="@style/LoginScreenTheme" />
+        <activity
+            android:name=".Views.Registration.RegistrationActivityView"
+            android:theme="@style/LoginScreenTheme" />
+        <activity android:name=".Views.Main.MainActivity" />
     </application>
 
 </manifest>
