changed list from listfragment to normal list, added first try of custom navigationdrawer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
 
         <activity android:name=".Views.Main.Practice.Notification.NotificationActivity" />
         <activity android:name=".Views.Main.Practice.NavigationDrawer.NavigationDrawerActivity" />
+        <activity android:name=".Views.Main.Practice.NavigationDrawer.CustomNavigationDrawerActivity"></activity>
     </application>
 
 </manifest>
