--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity
             android:name=".Views.SplashScreen.SplashActivity"
             android:noHistory="true"
-            android:theme="@style/SplashScreenTheme">
+            android:theme="@style/SplashScreenTheme"
+            android:resizeableActivity="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,21 +48,35 @@
         </activity>
         <activity
             android:name=".Views.Login.LoginActivity"
-            android:theme="@style/LoginScreenTheme" />
+            android:theme="@style/LoginScreenTheme"
+            android:resizeableActivity="true"/>
         <activity
             android:name=".Views.Registration.RegistrationActivity"
-            android:theme="@style/LoginScreenTheme" />
+            android:theme="@style/LoginScreenTheme"
+            android:resizeableActivity="true"/>
         <activity
             android:name=".Views.Main.MainActivity"
-            android:configChanges="orientation" />
-        <activity android:name=".Views.Main.Practice.Service.ServiceActivity" />
+            android:configChanges="orientation"
+            android:resizeableActivity="true"
+            android:supportsPictureInPicture="true"/>
+        <activity
+            android:name=".Views.Main.Practice.Service.ServiceActivity"
+            android:resizeableActivity="true"/>
 
         <!-- Services -->
-        <service android:name=".Views.Main.Practice.Service.MyService" />
+        <service
+            android:name=".Views.Main.Practice.Service.MyService"
+            android:resizeableActivity="true"/>
 
-        <activity android:name=".Views.Main.Practice.Notification.NotificationActivity" />
-        <activity android:name=".Views.Main.Practice.NavigationDrawer.NavigationDrawerActivity" />
-        <activity android:name=".Views.Main.Practice.CustomNavigationDrawer.CustomNavigationDrawerActivity"></activity>
+        <activity
+            android:name=".Views.Main.Practice.Notification.NotificationActivity"
+            android:resizeableActivity="true"/>
+        <activity
+            android:name=".Views.Main.Practice.NavigationDrawer.NavigationDrawerActivity"
+            android:resizeableActivity="true"/>
+        <activity
+            android:name=".Views.Main.Practice.CustomNavigationDrawer.CustomNavigationDrawerActivity"
+            android:resizeableActivity="true"/>
     </application>
 
 </manifest>
