--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,12 +35,20 @@
         </activity>
         -->
 
-        <receiver android:name=".MyAppWidgetProvider">
+        <receiver android:name=".Views.Widget.MyAppWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/my_app_widget_provider_info"/>
         </receiver>
+        
+        <activity
+            android:name=".Views.Widget.MyAppWidgetConfigureActivity"
+            android:theme="@style/MyAppTheme">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".Views.SplashScreen.SplashActivity"
@@ -84,11 +92,10 @@
         <activity
             android:name=".Views.Main.Practice.CustomNavigationDrawer.CustomNavigationDrawerActivity"
             android:resizeableActivity="true" />
-        <activity android:name=".Views.Main.Practice.DragAndDrop.DragAndDropActivity" />
         <activity
-            android:name=".MyAppWidgetConfigureActivity"
-            android:label="@string/title_activity_my_app_widget_configure"
-            android:theme="@style/MyAppTheme"></activity>
+            android:name=".Views.Main.Practice.DragAndDrop.DragAndDropActivity"
+            android:resizeableActivity="true"/>
+
     </application>
 
 </manifest>
